--- a/Resume.html
+++ b/Resume.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Resume - Supriya KumbharShirke</title>
+    <title>Resume - Supriya Kumbhar</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
