--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <button class="tab-btn active" onclick="openTab(event, 'home')">Home</button>
         <button class="tab-btn" onclick="openTab(event, 'about')">About</button>
         <button class="tab-btn" onclick="openTab(event, 'subject')">Subject</button>
+        <button class="tab-btn" onclick="openTab(event, 'feedback')">Feedback</button>
     </nav>
 
     <!-- Tab Content Sections -->
@@ -38,6 +39,30 @@
         <h2>Subjects</h2>
         <p>Here you can describe subjects, courses, or topics.</p>
     </section>
+    <section id="feedback" class="tab-content">
+    <h2>Feedback Form</h2>
+
+    <form id="feedbackForm">
+        <div class="form-group">
+            <label for="name">Full Name</label>
+            <input type="text" id="name" required>
+        </div>
+
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" required>
+        </div>
+
+        <div class="form-group">
+            <label for="message">Your Feedback</label>
+            <textarea id="message" rows="4" required></textarea>
+        </div>
+
+        <button type="submit" class="submit-btn">Submit</button>
+        <p id="formMessage"></p>
+    </form>
+</section>
+
 
     <!-- JavaScript File -->
     <script src="script.js"></script>
