Update website header with new name

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- Header Section -->
     <header>
-        <h1>My Professional Website</h1>
+        <h1>My Professional Website-Mrs. Supriya</h1>
     </header>
 
     <!-- Navigation Tabs -->
