--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <button class="tab-btn active" onclick="openTab(event, 'home')">Home</button>
         <button class="tab-btn" onclick="openTab(event, 'about')">About</button>
         <button class="tab-btn" onclick="openTab(event, 'subject')">Subject</button>
+        <button class="tab-btn" onclick="openTab(event, 'subject')">Resume</button>
         <button class="tab-btn" onclick="openTab(event, 'feedback')">Feedback</button>
     </nav>
 
